# keibamon

./: .device.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  app_plan.md  package-lock.json  package.json  pyproject.toml  requirements-ci.txt  tsconfig.json  wrangler.jsonc
.github/: dependabot.yml
backend/: README.md
docs/: app-simplification-bdd.md  app-simplification-plan.md  claude-design-brief.md  codebase-review-2026-07-08.md  data_architecture.md  device-topology.md  going-handling-features.md  going-handling-validation.md  jra-van-windows-ingestion.md  mac-resume-20260613.md  modeling-spine.md  my-tickets-rollout.md  odds-curve-validation.md  origin-story-and-milestones.md  overnight-hardening-2026-07-09-summary.md  product-plan-2026-summer.md  prompt-social-ux-fixes.md  r1-result-feed-brief.md  racing-glossary.md  requirements-social-ux-fixes.md  ux-audit-netkeiba.md  ux-implementation-plan.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
reference/: README.md
scripts/: deploy-guard.sh  stamp-version.mjs
splash/: helper.html  index.html  live.html  updates.html
src/: worker.fetch.test.ts  worker.js  worker.scheduled.test.ts
tests/: test_alerting.py  test_api.py  test_backtest.py  test_curve_features.py  test_curve_log.py  test_drift.py  test_exotic_model.py  test_features.py  test_form_api.py  test_form_marts.py  test_going_features.py  test_handicap.py  test_import_realtime.py  test_ingestion.py  test_jravan.py  test_jravan_declarations.py  test_jravan_masters.py  (+22 more)
(+419 files in other folders)
