[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keibamon"
version = "0.1.0"
description = "Data-first Japanese horse-racing research and ML platform"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "dagster>=1.8",
  "duckdb>=1.0",
  "fastapi>=0.115",
  "lightgbm>=4.5",
  "mlflow>=2.16",
  "numpy>=2.0",
  "pandas>=2.2",
  "pandera>=0.20",
  "polars>=1.0",
  "pyarrow>=17.0",
  "pydantic>=2.8",
  "scikit-learn>=1.5",
  "shap>=0.46",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src", "backend"]
include = ["keibamon_core*", "keibamon_orchestration*", "keibamon_api*"]

[tool.pytest.ini_options]
pythonpath = ["src", "backend"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

